name:                kippt-grabber
version:             0.1.0.0
synopsis:            Grab all of saved bookmarks from kippt
-- description:
license:             MIT
license-file:        LICENSE
author:              Masashi Fujita
maintainer:          objectxtreme@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable kippt-grabber
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      src
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , lens
                     , wreq
                     , aeson
                     , bytestring
                     , containers
                     , text
                     , http-client
                     , http-client-tls
                     , optparse-applicative
